--- a/app/views/back/system_admins/edit.html.erb
+++ b/app/views/back/system_admins/edit.html.erb
@@ -1,12 +1,12 @@
 <div class='box car-toolbox'>
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group">
-      <%= link_to [:back, @admin], {class: 'btn btn-default'} do%>
+      <%= link_to [:back, @system_admin], {class: 'btn btn-default'} do%>
         <i class="fa fa-info-circle"></i> <%= t('view.action.show_detail') %> 
       <% end %>
     </div>
     <div class="btn-group pull-right">
-      <%= link_to back_admins_path, {class: 'btn btn-default'} do %>
+      <%= link_to back_system_admins_path, {class: 'btn btn-default'} do %>
         <i class="fa fa-list"></i> <%= t('view.action.back_to_list') %> 
       <% end %>
     </div>
