--- a/app/views/back/system_admins/new.html.erb
+++ b/app/views/back/system_admins/new.html.erb
@@ -1,7 +1,7 @@
 <div class='box car-toolbox'>
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group pull-right">
-      <%= link_to back_admins_path, {class: 'btn btn-default'} do %>
+      <%= link_to back_system_admins_path, {class: 'btn btn-default'} do %>
         <i class="fa fa-list"></i> <%= t('view.action.back_to_list') %> 
       <% end %>
     </div>
