车检站管理员的crud

--- a/app/views/back/system_admins/show.html.erb
+++ b/app/views/back/system_admins/show.html.erb
@@ -37,7 +37,7 @@
     <dd>
       <% @system_admin.roles.each do |role| -%>
         <p>
-          <i class='fa fa-check-square-o'></i> <%= I18n.t("enumerize.system_roles.#{role }")%>
+          <i class='fa fa-check-square-o'></i> <%= I18n.t("enumerize.roles.system_admin.#{role }")%>
         </p>
       <% end -%>
     </dd>
