--- a/app/views/back/mystation/dashboard/index.html.erb
+++ b/app/views/back/mystation/dashboard/index.html.erb
@@ -5,14 +5,14 @@
     <div class="small-box bg-aqua">
       <div class="inner">
         <h3>
-          <%= 150 %><sup class="unit"> <%= t('view.unit.jian') %></sup>
+          <%= @newest_order_phone_count %><sup class="unit"> <%= t('view.unit.jian') %></sup>
         </h3>
-        <p>新预约</p>
+        <p>新电话预约</p>
       </div>
       <div class="icon">
-        <i class="ion ion-bag"></i>
+        <i class="fa fa-phone"></i>
       </div>
-      <%= link_to t('view.action.more_info').html_safe, nil,
+      <%= link_to t('view.action.more_info').html_safe, back_mystation_order_phones_path(scope: 'newest'),
         class: "small-box-footer" %>
     </div>
   </div><!-- ./col -->
