--- a/app/views/back/mystation/order_phones/_form.html.erb
+++ b/app/views/back/mystation/order_phones/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for([:back, :mystation, @order_phone], html: {class: 'form-horizontal mask-form', role: 'form'} ) do |f| %>
   <div class='car-form-items'>
-    <%= f.input :order_date %>
+    <%= f.input :order_date, as: :string, input_html: {car_date_picker: '', placeholder: 'yyyy-mm-dd'}%>
     <%= f.input :order_time %>
     <%= f.input :owner_name %>
     <%= f.input :car_number %>
