预约的时间段选择部分基本完成

--- a/app/assets/stylesheets/front.css.scss
+++ b/app/assets/stylesheets/front.css.scss
@@ -4,7 +4,10 @@
 @import "ionicon/ionicons";
 // AdminLTE关联
 @import "adminlte/AdminLTE";
+// iCheck关联
+@import "adminlte/iCheck/square/green";
 @import "csshake/csshake";
+@import "bootstrap-datetimepicker";
 
 @import "front/car_override";
 // 前端的通用样式
