--- a/app/views/back/mystation/order_nets/show.html.erb
+++ b/app/views/back/mystation/order_nets/show.html.erb
@@ -10,10 +10,10 @@
 
 <div class='box box-info car-content-box'>
   <dl class="dl-horizontal">
-    <dt><%= OrderNet.human_attribute_name(:order_date) %></dt>
-    <dd><%= @order_net.order_date%></dd>
+    <dt><%= OrderNet.human_attribute_name(:order_no) %></dt>
+    <dd><%= @order_net.order_no%></dd>
     <dt><%= OrderNet.human_attribute_name(:order_time) %></dt>
-    <dd><%= @order_net.order_time_text %></dd>
+    <dd><%= l(@order_net.order_time) %></dd>
     <dt><%= OrderNet.human_attribute_name(:owner_name) %></dt>
     <dd><%= @order_net.owner_name %></dd>
     <dt><%= OrderNet.human_attribute_name(:car_number) %></dt>
