--- a/app/views/back/mystation/order_phones/show.html.erb
+++ b/app/views/back/mystation/order_phones/show.html.erb
@@ -25,15 +25,17 @@
 
 <div class='box box-info car-content-box'>
   <dl class="dl-horizontal">
-    <dt><%= OrderPhone.human_attribute_name(:order_date) %></dt>
-    <dd><%= @order_phone.order_date%></dd>
+    <dt><%= OrderPhone.human_attribute_name(:order_no) %></dt>
+    <dd><%= @order_phone.order_no %></dd>
     <dt><%= OrderPhone.human_attribute_name(:order_time) %></dt>
-    <dd><%= @order_phone.order_time %></dd>
+    <dd><%= l(@order_phone.order_time) %></dd>
     <dt><%= OrderPhone.human_attribute_name(:owner_name) %></dt>
     <dd><%= @order_phone.owner_name %></dd>
     <dt><%= OrderPhone.human_attribute_name(:car_number) %></dt>
     <dd><%= @order_phone.car_number %></dd>
     <dt><%= OrderPhone.human_attribute_name(:telephone) %></dt>
     <dd><%= @order_phone.telephone %></dd>
+    <dt><%= OrderPhone.human_attribute_name(:create_admin_id) %></dt>
+    <dd><%= @order_phone.admin.name%></dd>
   </dl>
 </div>
