--- a/app/views/back/mystation/orders/_index_all.html.erb
+++ b/app/views/back/mystation/orders/_index_all.html.erb
@@ -1,19 +1,20 @@
-        <%= define_grid @order_phones_grid, hide_submit_button: true, hide_reset_button: true do |g|
-          g.column name: OrderPhone.human_attribute_name(:id), attribute: "id", detach_with_id: :id_filter
-          g.column name: OrderPhone.human_attribute_name(:order_no), attribute: "order_no", detach_with_id: :order_no_filter
-          g.column name: OrderPhone.human_attribute_name(:order_date), attribute: "order_date", detach_with_id: :order_date_filter
-          g.column name: OrderPhone.human_attribute_name(:order_time), attribute: "order_time", detach_with_id: :order_time_filter do |item|
-            item.order_time_text
+        <%= define_grid @orders_grid, hide_submit_button: true, hide_reset_button: true do |g|
+          g.column name: Order.human_attribute_name(:id), attribute: "id", detach_with_id: :id_filter
+          g.column name: Order.human_attribute_name(:order_no), attribute: "order_no", detach_with_id: :order_no_filter
+          g.column name: Order.human_attribute_name(:order_time), attribute: "order_time", detach_with_id: :order_time_filter do |item|
+            l(item.order_time)
           end
-          g.column name: OrderPhone.human_attribute_name(:car_number), attribute: "car_number", detach_with_id: :car_number_filter, ordering: false
-          g.column name: OrderPhone.human_attribute_name(:telephone), attribute: "telephone", ordering: false, detach_with_id: :telephone_filter
+          g.column name: Order.human_attribute_name(:car_number), detach_with_id: :car_number_filter, ordering: false do |item|
+            item.car_number
+          end
+          g.column name: Order.human_attribute_name(:telephone), attribute: "telephone", ordering: false, detach_with_id: :telephone_filter
           g.column do |item|
             links = []
             if can? :read, item
               links << link_to(I18n.t('view.action.show'), [:back, :mystation, item])
             end
             if can? :update, item
-              links << link_to(I18n.t('view.action.edit'), edit_back_mystation_order_phone_path(item))
+              links << link_to(I18n.t('view.action.edit'), [:edit, :back, :mystation, item])
             end
             if can? :destroy, item
               links << link_to(I18n.t('view.action.delete'), [:back, :mystation, item], method: :delete, data: { confirm: t('view.confirm.delete')})
@@ -30,30 +31,34 @@
           </div><!-- /.box-header -->
           <div class="box-body">
             <div class="row car-filter-item">
-              <div class="col-sm-2 item-label">ID</div>
+              <div class="col-sm-2 item-label"><%= Order.human_attribute_name(:id)%></div>
               <div class="col-sm-4">
-                <%= grid_filter @order_phones_grid, :id_filter %>
+                <%= grid_filter @orders_grid, :id_filter %>
               </div>
             </div>
             <div class="row car-filter-item">
-              <div class="col-sm-2 item-label">预约流水号</div>
+              <div class="col-sm-2 item-label"><%= Order.human_attribute_name(:order_no)%></div>
               <div class="col-sm-4">
-                <%= grid_filter @order_phones_grid, :order_no_filter %>
+                <%= grid_filter @orders_grid, :order_no_filter %>
               </div>
             </div><!-- /.row - inside box -->
             <div class="row car-filter-item">
-              <div class="col-sm-2 item-label">预约日期</div>
+              <div class="col-sm-2 item-label"><%= Order.human_attribute_name(:order_time)%></div>
               <div class="col-sm-4">
-                <%= grid_filter @order_phones_grid, :order_date_filter %>
+                <%= grid_filter @orders_grid, :order_time_filter %>
               </div>
             </div><!-- /.row - inside box -->
           </div><!-- /.box-body -->
           <div class="box-footer">
-            <button class="btn btn-primary wg-external-submit-button" data-grid-name="grid">查询</button>
-            <button class="btn btn-default wg-external-reset-button" data-grid-name="grid">清空</button>
+            <button class="btn btn-primary wg-external-submit-button" data-grid-name="grid">
+              <%= t('view.action.find')%>
+            </button>
+            <button class="btn btn-default wg-external-reset-button" data-grid-name="grid">
+              <%= t('view.action.clear')%>
+            </button>
           </div><!-- /.box-footer -->
         </div>
       </div>
       <div class='car-content-list'>
-        <%= render_grid(@order_phones_grid) %>
+        <%= render_grid(@orders_grid) %>
       </div>
