--- a/app/views/back/mystation/orders/_index_no_filter.html.erb
+++ b/app/views/back/mystation/orders/_index_no_filter.html.erb
@@ -1,19 +1,21 @@
-<%= grid @order_phones_grid, show_filters: :no do |g|
-  g.column name: OrderPhone.human_attribute_name(:id), attribute: "id"
-  g.column name: OrderPhone.human_attribute_name(:order_no), attribute: "order_no"
-  g.column name: OrderPhone.human_attribute_name(:order_date), attribute: "order_date"
-  g.column name: OrderPhone.human_attribute_name(:order_time), attribute: "order_time" do |item|
-    item.order_time_text
+<%= grid @orders_grid, show_filters: :no do |g|
+  g.column name: Order.human_attribute_name(:id), attribute: "id"
+  g.column name: Order.human_attribute_name(:order_no), attribute: "order_no"
+  g.column name: Order.human_attribute_name(:order_time), attribute: "order_time" do |item|
+    l(item.order_time)
   end
-  g.column name: OrderPhone.human_attribute_name(:car_number), attribute: "car_number", ordering: false
-  g.column name: OrderPhone.human_attribute_name(:telephone), attribute: "telephone", ordering: false
+  g.column name: Order.human_attribute_name(:car_number), ordering: false do |item|
+    item.car_number
+  end
+  g.column name: Order.human_attribute_name(:telephone), attribute: "telephone", ordering: false
   g.column do |item|
     links = []
     if can? :read, item
       links << link_to(I18n.t('view.action.show'), [:back, :mystation, item])
     end
     if can? :update, item
-      links << link_to(I18n.t('view.action.edit'), edit_back_mystation_order_phone_path(item))
+      links << link_to(I18n.t('view.action.edit'), [:edit, :back, :mystation, item])
+
     end
     if can? :destroy, item
       links << link_to(I18n.t('view.action.delete'), [:back, :mystation, item], method: :delete, data: { confirm: t('view.confirm.delete')})
