--- a/app/views/front/station/show_order.html.erb
+++ b/app/views/front/station/show_order.html.erb
@@ -19,10 +19,10 @@
             </div>
             <div class="form-group">
               <label class="col-sm-3 control-label">
-                <%=Order.human_attribute_name(:order_date)%>
+                <%=Order.human_attribute_name(:order_time)%>
               </label>
               <div class="col-sm-9">
-                <p class="form-control-static important-info"><%= @order.order_date %></p>
+                <p class="form-control-static important-info"><%= l(@order.order_time)%></p>
               </div>
             </div>
             <div class="form-group">
