--- a/app/views/front/station/steps/_form_step_basic_info.html.erb
+++ b/app/views/front/station/steps/_form_step_basic_info.html.erb
@@ -1,4 +1,4 @@
   <%= f.input :car_number_area, required: true %>
   <%= f.input :car_number_detail, required: true %>
   <%= f.input :owner_name, required: true %>
-  <%= f.input :telephone, required: true %>
+  <%= f.input :telephone, input_html: telephone_mask_hash %>
