车牌号输入框完成

--- a/app/assets/stylesheets/back/common.css.scss
+++ b/app/assets/stylesheets/back/common.css.scss
@@ -51,3 +51,9 @@ sup.unit {
 .car-filter-item {
   margin: 5px;
 }
+
+.input-group > .input-group-addon > select {
+  width: auto;
+  height: auto;
+  display: inline-block;
+}
