--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -102,3 +102,12 @@ footer {
 .car-form-actions {
   padding: 15px;
 }
+
+// -----------------------------------------
+// simple form wrapper部分
+// -----------------------------------------
+.simple-form-inline {
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+}
