--- a/app/views/back/mystation/order_phones/_form.html.erb
+++ b/app/views/back/mystation/order_phones/_form.html.erb
@@ -2,8 +2,14 @@
   <div class='car-form-items'>
     <%= f.input :order_time, as: :string, input_html: {car_date_picker: '', placeholder: 'yyyy-mm-dd'}%>
     <%= f.input :owner_name %>
-    <%= f.input :car_number_area %>
-    <%= f.input :car_number_detail %>
+    <div class="form-group required order_phone_car_number">
+      <%= f.label :car_number, required: true  %>
+      <div class="col-sm-10">
+        <%= f.input :car_number_area, as: :select, collection: Car::Code::CAR_NUMBER_AREA,
+          wrapper: :simple_inline, prompt: t('view.prompt.car_area') %>
+        <%= f.input :car_number_detail, wrapper: :simple_inline %>
+      </div>
+    </div>
     <%= f.input :telephone, input_html: telephone_mask_hash %>
   </div>
   <div class="car-form-actions bg-gray">
