--- a/app/views/front/station/steps/_form_step_confirmation.html.erb
+++ b/app/views/front/station/steps/_form_step_confirmation.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:alert] %>
+  <div class="alert alert-danger"><%= flash[:alert] %></div>
+  <% flash.clear %>
+<% end %>
 <div class="confirmation">
   <div class="panel panel-info">
     <div class="panel-heading">预约信息确认</div>
@@ -37,5 +41,16 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="form-group required">
+  <label class="tel required col-sm-3 control-label" for="order_net_telephone">
+  <abbr title="必填项">*</abbr> <%= t('view.label.captcha') %></label>
+  <div class="col-sm-5">
+    <%= text_field_tag :captcha, nil, {autocomplete: "off", class: 'form-control', 
+      placeholder: t('view.placeholder.captcha')} %>
+  </div>
+  <div class='col-sm-2' style='float: left;'>
+      <%= captcha_tag class: 'car-captcha'%>
   </div>
 </div>
