--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -111,3 +111,10 @@ footer {
   float: left;
   margin-right: 10px;
 }
+
+// -----------------------------------------
+// btn default上的标签
+// -----------------------------------------
+.btn.btn-default > .badge {
+  background-color: #367fa9;
+}
