预约流水号随机生成逻辑实现

--- a/app/views/back/mystation/dashboard/index.html.erb
+++ b/app/views/back/mystation/dashboard/index.html.erb
@@ -10,7 +10,7 @@
         <p>新电话预约</p>
       </div>
       <div class="icon">
-        <i class="fa fa-phone"></i>
+        <i class="ion ion-bag"></i>
       </div>
       <%= link_to t('view.action.more_info').html_safe, back_mystation_orders_path(scope: 'newest'),
         class: "small-box-footer" %>
