完成登录页面的模版以及右边side

--- a/app/assets/stylesheets/devise_user.css.scss
+++ b/app/assets/stylesheets/devise_user.css.scss
@@ -39,3 +39,13 @@
   margin-left: 0px;
 }
 
+// -----------------------------------------
+// devise的顶部
+// -----------------------------------------
+.devise-header {
+  padding: 10px 0;
+}
+.header .logo.devise-title {
+  width: auto;
+  font-size: 18px;
+}
