--- a/app/views/front/common/_sign_in_form_email.html.erb
+++ b/app/views/front/common/_sign_in_form_email.html.erb
@@ -44,6 +44,9 @@
 </div>
 <div class="footer">
   <%= f.submit t('view.action.sign_in'), class: 'btn btn-lg btn-success col-sm-2' %>
+  <div style="float:left; margin: 20px 0 0 30px;">
+    <%= link_to "忘记密码?", new_user_password_path %><br />
+  </div>
 </div>
 <div class="clearfix"></div>
 <% end %>
