--- a/app/views/users/shared/_links.erb
+++ b/app/views/users/shared/_links.erb
@@ -1,21 +1,31 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "登录", new_user_session_path %><br />
+  已经有账号？赶快
+  <%= link_to t('view.action.sign_in'), new_user_session_path, class: "btn btn-danger btn-sm" %>
+  吧！
+  <br />
+  <br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "注册新用户", new_user_registration_path %><br />
-<% end -%>
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "忘记密码?", new_user_password_path %><br />
+  还没有账号？赶快
+  <%= link_to t('view.action.sign_up'), new_user_registration_path, class: "btn btn-success btn-sm" %>
+  一个吧！
+  <br />
+  <br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "没有收到确认邮件?", new_user_confirmation_path %><br />
+  没有收到确认邮件？请点击
+  <%= link_to t('view.action.resend'), new_user_confirmation_path, class: "btn btn-warning btn-sm" %>
+  <br />
+  <br />
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "没有收到解锁邮件?", new_user_unlock_path %><br />
+  没有收到解锁邮件？请点击
+  <%= link_to t('view.action.resend'), new_user_unlock_path, class: "btn btn-primary btn-sm" %>
+  <br />
+  <br />
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
