--- a/app/views/front/common/_sign_in_form_phone.html.erb
+++ b/app/views/front/common/_sign_in_form_phone.html.erb
@@ -52,7 +52,7 @@
   <br>
 </div>
 <div class="footer">
-  <%= f.submit "登录", class: 'btn btn-lg btn-success col-sm-2' %>
+  <%= f.submit t('view.action.sign_in'), class: 'btn btn-lg btn-success col-sm-2' %>
 </div>
 <div class="clearfix"></div>
 <% end %>
