--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head_title do %>
-  忘记密码？
+<%= t("view.confirm.forget_password")%>
 <% end %>
 
 <div class='row car-devise'>
@@ -12,7 +12,7 @@
       </div>
 
       <div class="car-form-actions">
-        <%= f.button :submit, "发送重置密码邮件",
+        <%= f.button :submit, t('view.action.send_reset_password_mail'),
               class: 'btn btn-success col-sm-offset-2' %>
       </div>
     <% end %>
