css，js文件重新命名，back端select order time的view实装

--- a/app/assets/stylesheets/common/order.css.scss
+++ b/app/assets/stylesheets/common/order.css.scss
@@ -1,5 +1,5 @@
 // =======================================
-// step title相关
+// 前台step title相关
 // =======================================
 .inner {
   padding: 10px;
