--- a/app/assets/stylesheets/front.css.scss
+++ b/app/assets/stylesheets/front.css.scss
@@ -10,8 +10,9 @@
 @import "bootstrap-datetimepicker";
 
 @import "front/car_override";
+
 // 前端的通用样式
 @import "common/base";
 @import "common/order";
-@import "front/common";
+@import "front/all";
 
