--- a/app/views/back/mystation/order_phones/_form.html.erb
+++ b/app/views/back/mystation/order_phones/_form.html.erb
@@ -1,16 +1,34 @@
 <%= simple_form_for([:back, :mystation, @order_phone], html: {class: 'form-horizontal mask-form', role: 'form'} ) do |f| %>
   <div class='car-form-items'>
-    <%= f.input :order_time, as: :string, input_html: {car_date_picker: '', placeholder: 'yyyy-mm-dd'}%>
-    <%= f.input :owner_name %>
-    <div class="form-group required order_phone_car_number">
-      <%= f.label :car_number, required: true  %>
-      <div class="col-sm-10">
-        <%= f.input :car_number_area, as: :select, collection: Car::Code::CAR_NUMBER_AREA,
-          wrapper: :simple_inline, prompt: t('view.prompt.car_area') %>
-        <%= f.input :car_number_detail, wrapper: :simple_inline %>
+
+    <div class="box box-solid box-primary">
+      <div class="box-header">
+        <h3 class="box-title">第一步:选择检车时间</h3>
       </div>
+      <div class="box-body">
+        <div style="padding: 10px;">
+          <%= render "order_time_area" %>
+        </div>
+      </div><!-- /.box-body -->
     </div>
-    <%= f.input :telephone, input_html: telephone_mask_hash %>
+
+    <div class="box box-solid box-primary">
+      <div class="box-header">
+        <h3 class="box-title">第二步:填写基本信息</h3>
+      </div>
+      <div class="box-body">
+        <%= f.input :owner_name %>
+        <div class="form-group required order_phone_car_number">
+          <%= f.label :car_number, required: true  %>
+          <div class="col-sm-10">
+            <%= f.input :car_number_area, as: :select, collection: Car::Code::CAR_NUMBER_AREA,
+              wrapper: :simple_inline, prompt: t('view.prompt.car_area') %>
+            <%= f.input :car_number_detail, wrapper: :simple_inline %>
+          </div>
+        </div>
+        <%= f.input :telephone, input_html: telephone_mask_hash %>
+      </div><!-- /.box-body -->
+    </div>
   </div>
   <div class="car-form-actions bg-gray">
     <div class='col-sm-offset-2 col-sm-10 button-wrapper'>
