--- a/app/views/back/mystation/order_phones/_order_time_area.html.erb
+++ b/app/views/back/mystation/order_phones/_order_time_area.html.erb
@@ -1,32 +1,34 @@
-<% if @order && @order.errors[:order_time].present? %>
+<% if @order_phone && @order_phone.errors[:order_time].present? %>
   <div class="alert alert-danger"><%= t('view.alert.order.order_time_blank')%></div>
 <% end %>
 
-<div class="row">
-  <div class="col-sm-2">
-    <label class="string optional control-label" for="">选择开始日期</label>
-  </div>
-  <div class="col-sm-3">
-    <input car_date_picker="" class="string optional form-control" id="select_start_date" name="select_start_date" placeholder="yyyy-mm-dd" type="text" value="">
+<div>
+  <div class="row">
+    <div class="col-sm-2">
+      <label class="string optional control-label" for="">选择开始日期</label>
+    </div>
+    <div class="col-sm-2">
+      <input car_date_picker="" class="string optional form-control" id="select_start_date" name="select_start_date"
+        placeholder="yyyy-mm-dd" type="text" value="">
+    </div>
+    <!-- 提示图标 -->
+    <div class="col-sm-3 col-sm-offset-4">
+      <%= render "common/order/order_select_time_tips" %>
+    </div>
   </div>
 
-  <!-- 提示图标 -->
-  <div class="col-sm-4 col-sm-offset-3">
-    <%= render "common/order/order_select_time_tips" %>
+  <div class="row">
+    <div id="select_time_info" style="margin-left: 10px;">
+      <% if @order_phone && @order_phone.order_time %>
+      <span class="label label-success" style="font-size: 100%;">已选择时间段：<%= l(@order_phone.order_time, format: :line) %></span>
+      <% end %>
+    </div>
   </div>
 </div>
 
-<br>
+<hr>
 
 <div class="car-nav-tabs-custom">
-  <ul class="nav nav-tabs" role="tablist">
-    <div class="pull-right" id="select_time_info" style="margin-top: 8px;">
-      <% if @order && @order.order_time %>
-      <span class="label label-success" style="font-size: 100%;">已选择时间段：<%= l(@order.order_time, format: :line) %></span>
-      <% end %>
-    </div>
-    <li class="active"><a href="">选择时间段</a></li>
-  </ul>
   <div class="tab-content">
     <div class="tab-pane active" style="overflow-x: scroll;">
       <table class="table car-order-select-time-table">
@@ -48,8 +50,8 @@
                       _value = key.to_time + (index+10).hours
                       _value = l(_value, format: :line)
                     %>
-                    <input type="radio" name="order_net[order_time]" value="<%= _value %>" 
-                      <%= 'checked' if @order && @order.order_time && l(@order.order_time, format: :line) == _value %> >
+                    <input type="radio" name="order_phone[order_time]" value="<%= _value %>" 
+                      <%= 'checked' if @order_phone && @order_phone.order_time && l(@order_phone.order_time, format: :line) == _value %> >
                   </div>
                 </td>
               <% else %>
