--- a/app/views/front/station/steps/_form_step_select_date.html.erb
+++ b/app/views/front/station/steps/_form_step_select_date.html.erb
@@ -50,6 +50,15 @@
                     %>
                     <input type="radio" name="order_net[order_time]" value="<%= _value %>" 
                       <%= 'checked' if @order && @order.order_time && l(@order.order_time, format: :line) == _value %> >
+                    <% if c > 2 %>
+                      <span class="label label-primary pull-right" style="font-size: 70%; margin-right: 3px;">
+                        余:<%= c %>
+                      </span>
+                    <% else %>
+                      <span class="label label-danger pull-right" style="font-size: 70%; margin-right: 3px;">
+                        余:<%= c %>
+                      </span>
+                    <% end %>
                   </div>
                 </td>
               <% else %>
